[package]
name = "libra"
version = "0.0.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }
libra_wallet = { path = "../../../../libra/client/libra_wallet/" }
client = { path = "../../../../libra/client" }
failure = { path = "../../../common/failure_ext", package = "failure_ext" }